tests/dfrouter/errors/options_parsing/triple_minus3/errors.dfrouter
Error: On processing option '---net-file':
 No option with the name '-net-file' exists.
Error: The parameter 'net.net.xml' is not allowed in this context.
 Switch or parameter name expected.
Error: Could not parse commandline options.
Quitting (on error).
